--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section content5 cid-ru8Q9XRovW" id="content5-5">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-ru8Q9XRovW" id="content5-5">
 
     
 
@@ -101,7 +101,7 @@
                         <p class="mbr-text mbr-fonts-style display-7">
                             Cut costs and boost speed by alloying storage-class memory with die-stack memory technologies in hybrid DIMM form-factor.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="index.html#content7-8" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="index.html#content6-i" class="btn btn-primary display-4">
                             Learn More
                         </a></div>
                 </div>
