--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section content5 cid-ru8Q9XRovW" id="content5-5">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section content5 cid-ru8Q9XRovW" id="content5-5">
 
     
 
@@ -295,7 +295,7 @@
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
-                                <img src="assets/images/untitled-1-850x203.png" class="img-responsive clients-img" alt="" title="">
+                                <img src="assets/images/edinb-logo1-2-906x327.png" class="img-responsive clients-img" alt="" title="">
                             </div>
                         </div>
                     </div>
