--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="mbr-section content5 cid-ru8Q9XRovW" id="content5-5">
+<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="mbr-section content5 cid-ru8Q9XRovW" id="content5-5">
 
     
 
@@ -311,7 +311,7 @@
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
-                                <img src="assets/images/oraclelabs-1-240x141.png" class="img-responsive clients-img" alt="" title="">
+                                <img src="assets/images/oraclelabs-3-850x500.png" class="img-responsive clients-img" alt="" title="">
                             </div>
                         </div>
                     </div>
