--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     Dmitrii Ustiugov</h1>
                 
                 <div class="mbr-section-text mbr-white pb-3 ">
-                    <p class="mbr-text mbr-fonts-style display-5">PhD Student in Computer Science at the University of Edinburgh and EPFL, supervised by Professors Boris Grot and Edouard Bugnion.<br><br>My research interests span across Computer Architecture and Computer Systems with a focus on hardware and AI support for cloud infrastructure.</p>
+                    <p class="mbr-text mbr-fonts-style display-5">PhD Student in Computer Science at University of Edinburgh and EPFL, supervised by Professors Boris Grot and Edouard Bugnion.<br><br>My research interests span across Computer Architecture and Computer Systems with a focus on hardware and AI support for cloud infrastructure.</p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="index.html#content5-5">Research</a> <a class="btn btn-md btn-primary display-4" href="index.html#content5-a">Publications</a> <a class="btn btn-md btn-primary display-4" href="index.html#content5-b">Teaching &amp; Supervision</a>  <a class="btn btn-md btn-primary display-4" href="index.html#content5-d">Collaboration</a></div>
             </div>
@@ -49,7 +49,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-ru8Q9XRovW" id="content5-5">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section content5 cid-ru8Q9XRovW" id="content5-5">
 
     
 
