--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-ru8Q9XRovW" id="content5-5">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="mbr-section content5 cid-ru8Q9XRovW" id="content5-5">
 
     
 
@@ -296,7 +296,7 @@
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
-                                <img src="assets/images/edinb-logo1-3-906x327.png" class="img-responsive clients-img" alt="" title="">
+                                <img src="assets/images/edinb-logo1-3-319x90.png" class="img-responsive clients-img" alt="" title="">
                             </div>
                         </div>
                     </div>
@@ -304,7 +304,7 @@
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
-                                <img src="assets/images/epfl-logo-2019-240x70.png" class="img-responsive clients-img" alt="" title="">
+                                <img src="assets/images/epfl-logo-2019-309x90.png" class="img-responsive clients-img" alt="" title="">
                             </div>
                         </div>
                     </div>
@@ -312,7 +312,7 @@
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
-                                <img src="assets/images/oraclelabs-3-850x500.png" class="img-responsive clients-img" alt="" title="">
+                                <img src="assets/images/forth-ics-logo-304x90.jpg" class="img-responsive clients-img" alt="" title="">
                             </div>
                         </div>
                     </div>
@@ -320,7 +320,7 @@
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
-                                <img src="assets/images/googlelogo-240x82.png" class="img-responsive clients-img" alt="" title="">
+                                <img src="assets/images/googlelogo-263x90.png" class="img-responsive clients-img" alt="" title="">
                             </div>
                         </div>
                     </div>
@@ -328,7 +328,7 @@
                     <div class="media-container-row">
                         <div class="col-md-12">
                             <div class="wrap-img ">
-                                <img src="assets/images/forth-ics-logo-240x71.jpg" class="img-responsive clients-img" alt="" title="">
+                                <img src="assets/images/oraclelabs-3-287x90.png" class="img-responsive clients-img" alt="" title="">
                             </div>
                         </div>
                     </div>
@@ -401,6 +401,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
