--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content5 cid-ru8Q9XRovW" id="content5-5">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content5 cid-ru8Q9XRovW" id="content5-5">
 
     
 
@@ -253,7 +253,7 @@
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ul>
-                    <li><strong>Lei Yan</strong>, Master Student, EPFL and RWTH Aachen University, 2018.<br><span style="font-size: 1rem;">Project: Design space exploration for adaptive highly concurrent systems.</span></li><li><strong>Siddharth Gupta</strong><span style="font-size: 1rem;">, PhD Student, EPFL, 2017.<br></span>Project: Performance analysis of Non-Volatile Memory systems.</li><li><strong>Nikhil Gupta</strong>, Undergraduate Intern, EPFL and IIT Delhi, 2016.<br>Project: Scalable infrastructure for large-scale CPU simulation.</li>
+                    <li><strong>Ivy Wang</strong>, Undergraduate student, University of Edinburgh, 2019.<br>Project: Software support for contiguous page table allocation.</li><li><strong>Sean Mullan</strong>, Undergraduate student, University of Edinburgh, 2019.<br>Project: Design exploration for TLB prefetching.</li><li><strong>Plamen Petrov</strong>, Undergraduate student, University of Edinburgh, 2019.<br>Project: Security implications of RDMA networks.</li><li><strong>Lei Yan</strong>, Master Student, EPFL and RWTH Aachen University, 2018.<br><span style="font-size: 1rem;">Project: Design space exploration for adaptive highly concurrent systems.</span></li><li><strong>Siddharth Gupta</strong><span style="font-size: 1rem;">, PhD Student, EPFL, 2017.<br></span>Project: Performance analysis of Non-Volatile Memory systems.</li><li><strong>Nikhil Gupta</strong>, Undergraduate Intern, EPFL and IIT Delhi, 2016.<br>Project: Scalable infrastructure for large-scale CPU simulation.</li>
                 </ul>
             </div>
         </div>
@@ -386,7 +386,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-8"><p>External reviewer at ATC'19 and ISCA'19</p></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-5 col-md-8"><p>External reviewer at ATC'19, ISCA'19, and CAL</p></div>
         </div>
     </div>
 </section>
