--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content5 cid-ru8Q9XRovW" id="content5-5">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section content5 cid-ru8Q9XRovW" id="content5-5">
 
     
 
@@ -183,7 +183,7 @@
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong>Hybrid-Memory Server Architectures</strong><br><br><a href="https://www.cc.gatech.edu/~adaglis3/files/papers/scm_memsys18.pdf">Design Guidelines for High-Performance SCM Hierarchies</a><br><strong>D.Ustiugov</strong>, A.Daglis, J.Picorel, M.Sutherland, E.Bugnion, B.Falsafi, D.Pnevmatikatos <br>MEMSYS 2018<br><br><a href="https://dl.acm.org/citation.cfm?id=3273992">Algorithm/Architecture Co-Design for Near-Memory Processing</a><br>M.Drumond, A.Daglis, N.Mirzadeh, <strong>D.Ustiugov</strong>, J.Picorel, B.Falsafi, B.Grot,D. Pnevmatikatos<br>ACM SIGOPS Operating Systems Review, 2018<br><br><a href="https://www.cc.gatech.edu/~adaglis3/files/papers/mondrian_isca17.pdf">The Mondrian Data Engine</a><br>M.Drumond, A.Daglis, N.Mirzadeh, <strong>D.Ustiugov</strong>, J.Picorel, B.Falsafi, B.Grot, D.Pnevmatikatos<br>ISCA 2017&nbsp;</p>
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong>Hybrid-Memory Server Architectures</strong><br><br><a href="https://www.cc.gatech.edu/~adaglis3/files/papers/scm_memsys18.pdf">Design Guidelines for High-Performance SCM Hierarchies</a><br><strong>D.Ustiugov</strong>, A.Daglis, J.Picorel, M.Sutherland, E.Bugnion, B.Falsafi, D.Pnevmatikatos <br>MEMSYS 2018<br><br><a href="https://dl.acm.org/citation.cfm?id=3273992">Algorithm/Architecture Co-Design for Near-Memory Processing</a><br>M.Drumond, A.Daglis, N.Mirzadeh, <strong>D.Ustiugov</strong>, J.Picorel, B.Falsafi, B.Grot, D.Pnevmatikatos<br>ACM SIGOPS Operating Systems Review, 2018<br><br><a href="https://www.cc.gatech.edu/~adaglis3/files/papers/mondrian_isca17.pdf">The Mondrian Data Engine</a><br>M.Drumond, A.Daglis, N.Mirzadeh, <strong>D.Ustiugov</strong>, J.Picorel, B.Falsafi, B.Grot, D.Pnevmatikatos<br>ISCA 2017&nbsp;</p>
                         </div>
                     </div>
                 </div>
@@ -205,7 +205,7 @@
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong>Ultra-Dense Secure Cloud Servers</strong><br><strong><br></strong><a href="https://www.research.ed.ac.uk/portal/files/77921532/Virtual_Address_Translation_vis_Learned_Page_Table_Indexes.pdf">Virtual Address Translation via Learned Page Table Indexes</a><br>A.Margaritov, <strong>D.Ustiugov</strong>, E.Bugnion, B.Grot<br>NeurIPS, ML for Systems workshop 2018<br><a href="index.html#content6-9">Prefetched Address Translation</a><br>A.Margaritov, <strong>D.Ustiugov</strong>, E.Bugnion, B.Grot<br>MICRO 2019<br></p>
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong>Ultra-Dense Secure Cloud Servers</strong><br><strong><br></strong><a href="https://www.research.ed.ac.uk/portal/files/77921532/Virtual_Address_Translation_vis_Learned_Page_Table_Indexes.pdf">Virtual Address Translation via Learned Page Table Indexes</a><br>A.Margaritov, <strong>D.Ustiugov</strong>, E.Bugnion, B.Grot<br>NeurIPS, ML for Systems workshop 2018<br><a href="http://homepages.inf.ed.ac.uk/bgrot/pubs/ASAP_MICRO19.pdf">Prefetched Address Translation</a><br>A.Margaritov, <strong>D.Ustiugov</strong>, E.Bugnion, B.Grot<br>MICRO 2019<br></p>
                         </div>
                     </div>
                 </div>
