added a note with a link to a new website
Signed-off-by: Dmitrii Ustiugov <dmitrii.ustiugov@ed.ac.uk>

--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@
 
             <div class="media-content">
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1">
-                    Dmitrii Ustiugov</h1>
+                    Dmitrii Ustiugov
+                    <br></strong><a href="https://ustiugov.github.io/" class="text-primary">To the new website.</a>
+
+                </h1>
                 
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-7">I am currently a postdoctoral researcher at ETH Zurich.&nbsp;<br><strong>NEWS</strong>: I am joining <a href="https://www.ntu.edu.sg/" class="text-primary">Nanyang Technological University, Singapore</a> as an Assistant Professor in December 2022.<br><br><strong>Hiring</strong>: I am looking for strong candidates to pursue a PhD in cloud and serverless computing, as well as Systems for Machine Learning directions. Positions are fully-funded and open for international candidates.<br><br><strong>Bio</strong>: I received a PhD degree in Computer Science from the University of Edinburgh where was co-advised by Professors Boris Grot and Edouard Bugnion (EPFL). I am leading the <a href="index.html#header16-1b" class="text-primary">vHive</a> open-source ecosystem for serverless experimentation. <br><br><br></p>
