--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         <div class="container-fluid">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobiri.se">
-                        <img src="assets/images/logo4-95x92.png" alt="Mobirise" style="height: 3rem;">
+                    <a href="http://ustiugov.github.io">
+                        <img src="assets/images/logo4-95x92.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-7" href="https://mobiri.se">Dmitrii Ustiugov</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-7" href="http://ustiugov.github.io">Dmitrii Ustiugov</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -55,23 +55,21 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#content5-5">Research</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#header16-1b">vHive Ecosystem</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#content5-a">Publications</a>
-                    </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#content5-d">Funding &amp; Collaboration</a></li></ul>
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobiri.se">Research</a></li>
+                    <li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobiri.se">Publications</a></li>
+                    <li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobiri.se">Teaching</a>
+                    </li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobiri.se">Teaching</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="https://mobiri.se">Teaching</a></li></ul>
                 <div class="icons-menu">
-                    <a class="iconfont-wrapper" href="mailto:dmitrii.ustiugov@inf.ethz.ch">
-                        <span class="p-2 mbr-iconfont socicon-mail socicon"></span>
+                    <a class="iconfont-wrapper" href="https://mobiri.se" target="_blank">
+                        <span class="p-2 mbr-iconfont socicon-facebook socicon"></span>
                     </a>
-                    <a class="iconfont-wrapper" href="https://twitter.com/DmitriiUstiugov" target="_blank">
+                    <a class="iconfont-wrapper" href="https://mobiri.se" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-twitter socicon"></span>
                     </a>
-                    <a class="iconfont-wrapper" href="https://github.com/ustiugov" target="_blank">
-                        <span class="p-2 mbr-iconfont socicon-github socicon"></span>
+                    <a class="iconfont-wrapper" href="https://mobiri.se" target="_blank">
+                        <span class="p-2 mbr-iconfont socicon-instagram socicon"></span>
                     </a>
-                    <a class="iconfont-wrapper" href="https://scholar.google.co.uk/citations?user=cZ9jA9oAAAAJ&hl=en" target="_blank">
-                        <span class="p-2 mbr-iconfont socicon-googlescholar socicon"></span>
-                    </a>
+                    
                 </div>
                 
             </div>
@@ -116,7 +114,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="sRWyi74uR1BTgDokF7kA4N0mhE9/aqkPJG4R4O89xJv37NTKEHgvBXD7QS2cYjk7PJ7gMfiU5nT1Cqwyl4kTWIagTj64Zr/058O5zvz61zbOk6SmpH4a1BPvfaWysxAL">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="yoyZRhjOmUpV3PYnkFMTcnSrcKE1mRE6vygX8STw4XOEStlZgKtXvyQoYazleN5XFowjaBc4RdQ59jcaMOT79gbGPVf6+hmFRBi1VP82/LDXxfPsBS9DttF1lt/nlSG8">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you, stay tuned!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -252,7 +250,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-4">
                     <div class="image-wrapper">
-                        <a href="https://github.com/ease-lab/vhive" target="_blank"><img src="assets/images/vhive-logo-341x322.jpg" alt="vHive"></a>
+                        <a href="https://github.com/ease-lab/vhive" target="_blank"><img src="assets/images/vhive-emblem-rgb.svg" alt="vHive"></a>
                     </div>
                 </div>
                 <div class="col-12 col-lg">
@@ -666,7 +664,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/g" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/i" style="color:#aaa;">Built with Mobirise</a> maker</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="https://platform.twitter.com/widgets.js"></script>  <script src="assets/reloader/script.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/a" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/c" style="color:#aaa;">The</a> website was designed with Mobirise</p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="https://platform.twitter.com/widgets.js"></script>  <script src="assets/reloader/script.js"></script>  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>  <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
