--- a/past-work.html
+++ b/past-work.html
@@ -60,7 +60,7 @@
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#content5-b">Teaching</a>
                     </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#content5-d">Funding &amp; Service</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#header16-x">Awards</a></li></ul>
                 <div class="icons-menu">
-                    <a class="iconfont-wrapper" href="mailto:dmitrii.ustiugov@inf.ethz.ch">
+                    <a class="iconfont-wrapper" href="mailto:dmitrii.ustiugov@ntu.edu.sg">
                         <span class="p-2 mbr-iconfont socicon-mail socicon"></span>
                     </a>
                     <a class="iconfont-wrapper" href="https://twitter.com/DmitriiUstiugov" target="_blank">
@@ -241,7 +241,7 @@
                     
                     
                 <div class="soc-item">
-                        <a href="mailto:dmitrii.ustiugov@inf.ethz.ch">
+                        <a href="mailto:dmitrii.ustiugov@ntu.edu.sg">
                             <span class="mbr-iconfont mbr-iconfont-social mbri-letter"></span>
                         </a>
                     </div><div class="soc-item">
@@ -264,7 +264,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/a" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">How to design a free website - <a href="https://mobirise.site/x" style="color:#aaa;">Read more</a></p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/l" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with Mobirise - <a href="https://mobirise.site/k" style="color:#aaa;">Find more</a></p></section><script src="assets/popper/popper.min.js"></script>  <script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
